--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atividade icaro 2</title>
     <script src="script.js"></script>
+    <title>JavaScript</title>
+
 </head>
 <body>
-    
+    <button onclick="atividade14()">Atividade 14</button>
+    <button onclick="atividade21()">Atividade 21</button>
+    <button onclick="atividade24()">Atividade 24</button>
 </body>
 </html>
