--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+    <button onclick="atividade12()">Atividade 12</button>
     <button onclick="atividade14()">Atividade 14</button>
     <button onclick="atividade21()">Atividade 21</button>
     <button onclick="atividade24()">Atividade 24</button>
